Added Model training and evaluation

--- a/research/labse_embeddings.ipynb
+++ b/research/labse_embeddings.ipynb
@@ -195,8 +195,7 @@
     "\n",
     "## Generate a classification report\n",
     "y_pred = clf.predict(X_test)\n",
-    "print(classification_report(y_test, y_pred))\n",
-    "\n"
+    "print(classification_report(y_test, y_pred))\n"
    ]
   },
   {
