Updated the notebook to download the data from kagglehub directly instead of relying on the data downloaded by the training pipeline

--- a/research/labse_embeddings.ipynb
+++ b/research/labse_embeddings.ipynb
@@ -7,9 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from tqdm import tqdm\n",
+    "import kagglehub\n",
     "from sentence_transformers import SentenceTransformer"
    ]
   },
@@ -89,7 +91,9 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../artifacts/data_ingestion/bongo_scam.csv')\n",
+    "path = kagglehub.dataset_download(\"henrydioniz/swahili-sms-detection-dataset\")\n",
+    "full_path = os.path.join(path, \"bongo_scam.csv\")\n",
+    "df = pd.read_csv(full_path)\n",
     "df.head()"
    ]
   },
