--- a/research/Qwen3_swahili_spam_detection.ipynb
+++ b/research/Qwen3_swahili_spam_detection.ipynb
@@ -675,7 +675,7 @@
         "id": "xe34cB0NiM47"
       },
       "source": [
-        "Since the dataset has many rows and I have limited compute, I will take 50 rows from each category. The purpose of this exercise is to see how LLama 3.2 could compare to supervised classification methods."
+        "Since the dataset has many rows and I have limited compute, I will take 50 rows from each category. The purpose of this exercise is to see how Qwen3 could compare to supervised classification methods."
       ]
     },
     {
